feat(backend): availability calendar half working