@@ -2,6 +2,7 @@ package pl.michal_sobiech.engineering_thesis.appointment.custom;
 
 import java.time.OffsetDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -18,6 +19,6 @@ public class CustomAppointmentsService {
     public List<ConfirmedCustomAppointment> getConfirmedAppointmentsInDatetimeRange(long serviceId, OffsetDateTime from,
             OffsetDateTime to) {
         List<AppointmentEntity> appointments = appointmentRepository.findConfirmedInDatetimeRange(serviceId, from, to);
-        return appointments.stream().map(a -> ConfirmedCustomAppointment.fromEntity(a)).toList();
+        return appointments.stream().map(a -> ConfirmedCustomAppointment.fromEntity(a)).collect(Collectors.toList());
     }
 }
